# so_arm100_ws

./: .pre-commit-config.yaml  99-lerobot.rules  README.md  control_robot_with_ps4.py  execute_recorded_trajectory.py  exercises.md  pyproject.toml  record_moveit_trajectory.py  so_arm100_setup_guide.md  start_robot.sh  test_arm_direct_2.py  test_joint_directions.py
docs/: moveit_setup_guide.md
install/: local_setup.sh  setup.sh
install/so_arm100/include/motors/: feetech.hpp
install/so_arm100/include/so_arm100/: feetech_hardware_interface.hpp
install/so_arm100/share/so_arm100/: feetech_hardware_interface.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/so_arm100/share/so_arm100/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  so_arm100Config-version.cmake  so_arm100Config.cmake
install/so_arm100/share/so_arm100/config/: joint_names_so_arm100.yaml  urdf.rviz
install/so_arm100/share/so_arm100/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
install/so_arm100/share/so_arm100/launch/: controllers_bringup.launch.py  display.launch  display.launch.py  gazebo.launch
install/so_arm100/share/so_arm100/meshes/: Base.STL  forearm_link.STL  jaw_link.STL  shoulder_link.STL  upper_arm_link.STL  wrist_1_link.STL  wrist_2_link.STL
install/so_arm100/share/so_arm100/urdf/: so_arm100.csv  so_arm100.urdf  so_arm100.urdf.xacro  so_arm100_control.urdf  so_arm100_control.urdf.xacro  so_arm100_macro.xacro
install/so_arm100/share/so_arm100/urdf/so_arm100/: so_arm100.usd
install/so_arm100_moveit_config/share/so_arm100_moveit_config/: .setup_assistant  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
recorded_trajectories/: trajectory_20241211_233436_part1.json  trajectory_20241211_233444_part1.json  trajectory_20241216_205100_part1.json
so_arm100/: CMakeLists.txt
so_arm100.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
so_arm100/config/: joint_names_so_arm100.yaml  urdf.rviz
so_arm100/control/: ros2_controllers.yaml  so_arm100.ros2_control.xacro
so_arm100/launch/: controllers_bringup.launch.py  display.launch  display.launch.py  gazebo.launch
so_arm100/meshes/: jaw_link.STL  upper_arm_link.STL
so_arm100/src/: feetech.cpp
so_arm100/urdf/: so_arm100.urdf  so_arm100.urdf.xacro  so_arm100_control.urdf.xacro
so_arm100_isaac/asset/: so_arm100.usd
so_arm100_moveit_config/: .setup_assistant  CMakeLists.txt
so_arm100_moveit_config/config/: arm_controller.yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  so_arm100.srdf
so_arm100_moveit_config/launch/: rsp.launch.py  setup_assistant.launch.py  static_virtual_joint_tfs.launch.py
so_arm100_moveit_config/scripts/: test_move.py
(+27 files in other folders)
