[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "so-arm100"
version = "0.1.0"
description = "SO-Arm100 robot package"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "termcolor>=2.4.0",
    "omegaconf>=2.3.0",
    "hydra-core>=1.3.2"
]

[project.optional-dependencies]
feetech = [
    "feetech-servo-sdk>=1.0.0",
    "pynput>=1.7.7"
]

[tool.setuptools]
packages = ["so_arm100", "so_arm100_moveit_config"]
package-dir = {"" = "."}

[tool.setuptools.exclude-package-data]
"*" = ["build*", "install*", "log*"]
